# bevy_entitiles

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTE.md  SCHEDULE.md  json.json  release_note.md
.github/ISSUE_TEMPLATE/: document-issue-report.md  feature-request.md  importer-bug-report.md  logic-error-report.md  other-issues-report.md  rendering-bug-report.md
assets/: custom_material.wgsl  ui_tiles.wgsl
assets/ldtk/: grid_vania.ldtk  ldtk_data.json  test_ldtk.json  test_ldtk.ldtk  wfc_source.ldtk
assets/ldtk/test_ldtk/simplified/AutoLayer/: IntGrid_layer.csv  data.json
assets/test/: test.md  test_isometric.aseprite  test_square.aseprite  test_wfc.aseprite
assets/tiled/: Tilemap.tiled-project  Tilemap.tiled-session  Tileset1.tsx  orthogonal.tmx
assets/tiled/tilemaps/: hexagonal.tmx  hexgonal.tmx  infinite.tmx  isometric.tmx  isometricCube.tmx  orthogonal.tmx
assets/tiled/tilesets/: 8pxSquare.tsx  Hexagonal.tsx  Isometric.tsx  IsometricCube.tsx  Squares.tsx  Tileset1.tsx  Tileset2.tsx
bevy_entitiles/: Cargo.toml  README.md  release_note.md
bevy_entitiles/assets/ldtk/: feature_test.ldtk  typical_2d_platformer.ldtk
bevy_entitiles/examples/: animation.rs  ldtk.rs  wfc.rs
bevy_entitiles/examples/helpers/: drawing.rs  mod.rs
bevy_entitiles/src/: lib.rs
bevy_entitiles/src/algorithm/: wfc.rs
bevy_entitiles/src/debug/: mod.rs
bevy_entitiles/src/math/: aabb.rs
bevy_entitiles/src/render/: binding.rs  buffer.rs  chunk.rs  culling.rs  draw.rs  extract.rs  mod.rs  pipeline.rs  prepare.rs  queue.rs  resources.rs  texture.rs  uniform.rs
bevy_entitiles/src/render/shaders/: common.wgsl  hexagonal.wgsl  iso_diamond.wgsl  square.wgsl  tilemap.wgsl
bevy_entitiles/src/serializing/: mod.rs
bevy_entitiles/src/serializing/ldtk/: app_ext.rs  entities.rs  entity.rs  enum.rs  mod.rs
bevy_entitiles/src/serializing/ldtk/json/: definitions.rs  level.rs  macros.rs  mod.rs
bevy_entitiles/src/tilemap/: layer.rs  map.rs  tile.rs
bevy_entitiles/src/tilemap/algorithm/: path.rs
bevy_entitiles/src/ui/: ui_tiles.wgsl
bevy_entitiles_derive/: Cargo.toml
bevy_entitiles_derive/src/: lib.rs
docs/imgs/: editor-ui.psd  repo_img.aseprite
docs/wiki/: chapter01_basic.md  chapter02_rendering.md  chapter03_algorithms.md  chapter04_physics.md  chapter05_serializing.md  chapter06_ldtk_import.md  welcome.md
docs/wiki/en_us/: chapter01_basic.md  chapter02_rendering.md  chapter03_algorithms.md  chapter04_physics.md  chapter05_serializing.md  chapter06_ldtk_import.md  welcome.md
docs/wiki/zh_cn/: chapter01_basic.md  chapter02_rendering.md  chapter03_algorithms.md  chapter04_physics.md  chapter05_serializing.md  chapter06_ldtk_import.md  welcome.md
examples/: README.md  all_kinds.rs  animation.rs  baking.rs  basic.rs  chunk_unloading.rs  clouds_and_fog.rs  custom_material.rs  editor.rs  fog.rs  infinite_with_unloading.rs  isometric_cubes.rs  ldtk.rs  ldtk_wfc.rs  ldtk_wfc_config.ron  multiple_tilesets.rs  non_uniform.rs  ood-chunk_unloading.rs  ood-save_and_load.rs  ood-test.rs  ood-test_all_kinds.rs  ood-tiled.rs  pathfinding.rs  pathfinding_single_threaded.rs  physics.rs  physics_rapier.rs  physics_xpbd.rs  save_and_load.rs  stress_test.rs  tiled.rs  ui.rs  wave_function_collapse.rs  wfc.rs  wfc_config.ron  wfc_pattern.rs  wfc_weights.ron
examples/helpers/: camera_movement.rs  common.rs  drawing.rs  mod.rs
macros/: Cargo.toml  README.md
macros/src/: ldtk_entity.rs  ldtk_entity_tag.rs  ldtk_enum.rs  lib.rs  tiled_class.rs  tiled_custom_tile.rs  tiled_enum.rs  tiled_object.rs
src/: lib.rs  main.rs
src/algorithm/: mod.rs  pathfinding.rs  wfc.rs
src/debug/: camera_movement.rs  common.rs  drawing.rs  mod.rs
src/editor/: mod.rs  palatte.rs  ui.rs
src/ldtk/: app_ext.rs  components.rs  entities.rs  entity_sprite.wgsl  events.rs  layer.rs  mod.rs  physics.rs  resources.rs  sprite.rs  traits.rs
src/ldtk/json/: definitions.rs  field.rs  level.rs  macros.rs  mod.rs
src/ldtk/layer/: mod.rs  path.rs  physics.rs
src/math/: aabb.rs  bvh.rs  ext.rs  extension.rs  geometry.rs  mod.rs  tilemap.rs
src/post_processing/: mod.rs  pipeline.rs  stages.rs  uniform.rs
src/post_processing/mist/: mist.wgsl  mod.rs  pipeline.rs
src/reflect/: mod.rs
src/render/: bake.rs  binding.rs  buffer.rs  chunk.rs  cleanup.rs  cull.rs  culling.rs  draw.rs  extract.rs  material.rs  mod.rs  pipeline.rs  prepare.rs  queue.rs  resources.rs  texture.rs  uniform.rs
src/render/shaders/: common.wgsl  height_map.wgsl  height_texture.wgsl  hexagonal.wgsl  iso_diamond.wgsl  isometric.wgsl  square.wgsl  tilemap.wgsl
src/serializing/: load.rs  mod.rs  pattern.rs  save.rs
src/serializing/chunk/: camera.rs  load.rs  macros.rs  mod.rs  save.rs
src/serializing/ldtk/: app_ext.rs  components.rs  definitions.rs  entities.rs  entity.rs  entity_sprite.wgsl  json.rs  layer.rs  level.rs  macros.rs  manager.rs  mod.rs  physics.rs  resources.rs  sprite.rs  sprites.rs
src/serializing/ldtk/json/: definitions.rs  field.rs  level.rs  mod.rs
src/serializing/map/: load.rs  mod.rs  pattern.rs  save.rs
src/shaders/: math.wgsl  mod.rs  value_noise.wgsl
src/test/: mod.rs
src/tiled/: app_ext.rs  components.rs  events.rs  mod.rs  resources.rs  sprite.rs  tiled_sprite.wgsl  traits.rs
src/tiled/xml/: default.rs  layer.rs  mod.rs  property.rs  tileset.rs
src/tilemap/: algo_tilemap.rs  buffers.rs  bundles.rs  chunk.rs  coordinates.rs  despawn.rs  layer.rs  map.rs  mod.rs  physics.rs  physics_rapier.rs  physics_xpbd.rs  storage.rs  tile.rs
src/tilemap/algorithm/: height.rs  mod.rs  path.rs
src/tilemap/chunking/: camera.rs  mod.rs  storage.rs
src/tilemap/physics/: mod.rs  rapier.rs  systems.rs  xpbd.rs
src/tilemap/post_processing/: height.rs  mod.rs
src/tilemap/ui/: mod.rs
src/ui/: mod.rs  pipeline.rs  render.rs  resources.rs  ui_tiles.wgsl  uniform.rs
src/utils/: asset.rs  mesh.rs  mod.rs
test/: main.rs
