[package]
name = "bevy_entitiles"
version = "0.2.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/443eb9/bevy_entitiles"
description = "A 2d tilemap library for bevy. With many useful algorithms/tools built in."
exclude = ["assets/", "docs/imgs/"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "png",
    "bevy_winit",
    "bevy_sprite",
    "multi-threaded",
    "bevy_gizmos",
    "bevy_text",
    "bevy_ui",
    "default_font",
] }
ron = { version = "0.8.0", optional = true }
rand = { version = "0.8.0", optional = true }
serde = { version = "1.0.150", optional = true }
bevy_xpbd_2d = { version = "0.3.3", optional = true }
serde_json = { version = "1.0.100", optional = true }
bevy_entitiles_derive = { version = "0.1.1", optional = true, path = "macros" }
futures-lite = { version = "2.2.0", optional = true }
radsort = "0.1.0"

[dev-dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_gizmos",
    "bevy_ui",
    "png",
    "bevy_winit",
    "bevy_text",
    "bevy_sprite",
    "default_font",
    "trace_tracy",
    "multi-threaded",
] }
bevy_mod_debugdump = "0.9.0"
bevy-inspector-egui = "0.22.0"
image = "0.24.7"

[features]
default = []
algorithm = ["dep:rand", "serializing", "dep:futures-lite"]
debug = []
physics = ["dep:bevy_xpbd_2d"]
serializing = ["dep:ron", "dep:serde"]
ldtk = ["serializing", "dep:serde_json", "dep:bevy_entitiles_derive"]
ui = []

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = []

[[example]]
name = "animation"
path = "examples/animation.rs"
required-features = []

[[example]]
name = "pathfinding"
path = "examples/pathfinding.rs"
required-features = ["algorithm"]

[[example]]
name = "wfc"
path = "examples/wfc.rs"
required-features = ["algorithm"]

[[example]]
name = "physics"
path = "examples/physics.rs"
required-features = ["physics"]

[[example]]
name = "save_and_load"
path = "examples/save_and_load.rs"
required-features = ["algorithm"]

[[example]]
name = "ldtk"
path = "examples/ldtk.rs"
required-features = ["debug", "ldtk", "physics"]

[[example]]
name = "wfc_pattern"
path = "examples/wfc_pattern.rs"
required-features = ["algorithm"]

[[example]]
name = "ldtk_wfc"
path = "examples/ldtk_wfc.rs"
required-features = ["algorithm", "ldtk", "physics"]

[[example]]
name = "chunk_unloading"
path = "examples/chunk_unloading.rs"
required-features = ["debug", "serializing"]

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"
required-features = []
