[package]
name = "bevy_entitiles"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/443eb9/bevy_entitiles"
description = "A 2d tilemap library for bevy. With many useful algorithms/tools built in."
exclude = ["assets/", "docs/imgs/"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "png",
    "bevy_winit",
    "bevy_sprite",
    "multi-threaded",
    "bevy_gizmos",
    "bevy_text",
    "bevy_ui",
    "default_font",
] }
bevy_entitiles_derive = { version = "0.2.0", optional = true, path = "macros" }
bevy_xpbd_2d = { version = "0.3.3", optional = true }
bitflags = "2.4.0"
futures-lite = { version = "2.2.0", optional = true }
quick-xml = { version = "0.31.0", optional = true, features = ["serialize"] }
radsort = "0.1.0"
rand = { version = "0.8.0", optional = true }
ron = { version = "0.8.0", optional = true }
serde = { version = "1.0.150", optional = true }
serde_json = { version = "1.0.100", optional = true }

[dev-dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_gizmos",
    "bevy_ui",
    "png",
    "bevy_winit",
    "bevy_text",
    "bevy_sprite",
    "default_font",
    "trace_tracy",
    "multi-threaded",
] }
bevy-inspector-egui = "0.22.0"
bevy_mod_debugdump = "0.9.0"
image = "0.24.7"

[features]
default = []
algorithm = ["dep:rand", "serializing", "dep:futures-lite"]
atlas = []
debug = []
physics = ["dep:bevy_xpbd_2d"]
serializing = ["dep:ron", "dep:serde"]
ldtk = ["serializing", "dep:serde_json", "dep:bevy_entitiles_derive"]
tiled = ["dep:serde", "dep:quick-xml"]

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = []

[[example]]
name = "animation"
path = "examples/animation.rs"
required-features = []

[[example]]
name = "pathfinding"
path = "examples/pathfinding.rs"
required-features = ["algorithm"]

[[example]]
name = "wfc"
path = "examples/wfc.rs"
required-features = ["algorithm"]

[[example]]
name = "physics"
path = "examples/physics.rs"
required-features = ["physics"]

[[example]]
name = "save_and_load"
path = "examples/save_and_load.rs"
required-features = ["algorithm", "physics"]

[[example]]
name = "ldtk"
path = "examples/ldtk.rs"
required-features = ["debug", "ldtk", "physics"]

[[example]]
name = "wfc_pattern"
path = "examples/wfc_pattern.rs"
required-features = ["algorithm"]

[[example]]
name = "ldtk_wfc"
path = "examples/ldtk_wfc.rs"
required-features = ["algorithm", "ldtk", "physics"]

[[example]]
name = "chunk_unloading"
path = "examples/chunk_unloading.rs"
required-features = ["debug", "algorithm", "serializing", "physics"]

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"
required-features = []

[[example]]
name = "tiled"
path = "examples/tiled.rs"
required-features = ["tiled"]
