[package]
name = "bevy_entitiles"
version = "0.9.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/443eb9/bevy_entitiles"
description = "A 2d tilemap library for bevy. With many useful algorithms/tools built in."
include = ["/src", "Cargo.toml", "README.md", "LICENSE"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "png",
    "bevy_sprite",
] }
bevy_entitiles_derive = { version = "0.4", optional = true, path = "macros" }
bevy_xpbd_2d = { version = "0.4", optional = true }
bitflags = "2"
futures-lite = { version = "2", optional = true }
hashbrown = { version = "0.14", features = ["rayon"] }
indexmap = { version = "2.2", features = ["rayon"] }
quick-xml = { version = "0.31", optional = true, features = [
    "serialize",
    "overlapped-lists",
] }
radsort = "0.1"
rand = { version = "0.8", optional = true }
rayon = "1.10"
ron = { version = "0.8", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "trace_tracy",
    "x11",
    "wayland",
] }
bevy-inspector-egui = "0.24"
bevy_mod_debugdump = "0.10"
image = "0.25"

[features]
default = ["multi-threaded"]
algorithm = ["dep:rand", "serializing", "dep:futures-lite"]
atlas = []
baking = ["atlas"]
debug = ["bevy/bevy_gizmos"]
ldtk = ["serializing", "dep:serde_json", "dep:bevy_entitiles_derive"]
multi-threaded = ["bevy/multi-threaded"]
physics = ["dep:bevy_xpbd_2d"]
serializing = ["dep:ron", "dep:serde"]
tiled = ["dep:serde", "dep:quick-xml", "dep:bevy_entitiles_derive", "atlas"]

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = []

[[example]]
name = "animation"
path = "examples/animation.rs"
required-features = []

[[example]]
name = "pathfinding"
path = "examples/pathfinding.rs"
required-features = ["algorithm", "multi-threaded"]

[[example]]
name = "pathfinding_single_threaded"
path = "examples/pathfinding_single_threaded.rs"
required-features = ["algorithm"]

[[example]]
name = "wfc"
path = "examples/wfc.rs"
required-features = ["algorithm"]

[[example]]
name = "physics"
path = "examples/physics.rs"
required-features = ["physics"]

[[example]]
name = "save_and_load"
path = "examples/save_and_load.rs"
required-features = ["algorithm", "physics"]

[[example]]
name = "ldtk"
path = "examples/ldtk.rs"
required-features = ["debug", "ldtk", "physics"]

[[example]]
name = "wfc_pattern"
path = "examples/wfc_pattern.rs"
required-features = ["algorithm"]

[[example]]
name = "ldtk_wfc"
path = "examples/ldtk_wfc.rs"
required-features = ["algorithm", "ldtk", "physics"]

[[example]]
name = "chunk_unloading"
path = "examples/chunk_unloading.rs"
required-features = ["debug", "serializing", "physics"]

[[example]]
name = "tiled"
path = "examples/tiled.rs"
required-features = ["tiled", "physics"]

[[example]]
name = "custom_material"
path = "examples/custom_material.rs"
required-features = []

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"
required-features = []

[[example]]
name = "baking"
path = "examples/baking.rs"
required-features = ["baking"]

[[example]]
name = "multiple_tilesets"
path = "examples/multiple_tilesets.rs"
required-features = []

[[example]]
name = "isometric_cubes"
path = "examples/isometric_cubes.rs"
required-features = []
